--- a/css/from_instincthub.css
+++ b/css/from_instincthub.css
@@ -11,16 +11,18 @@ HTML Footer tags:
 
 .from-instincthub{
   text-align: center;
-  margin-top: 50px;
-  position: absolute;
+  /* margin-top: 20%; */
+  /* position: absolute; */
+  text-align: center;
   bottom: 15px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
   bottom: 20px
 }
 .from-instincthub h3 {
     color: #ffffff;
     font-size: 12px;
+    
 }
 .from-instincthub img {
     width: 100px;
