--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
   width: 50%;
   max-width: 800px;
   min-width: 480px;
-  margin: 15vh auto 0 auto;
+  margin: 5vh auto 0 auto;
   /* background-color: #fff; */
   /* border-radius: 5px; */
   /* box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1); */
@@ -53,6 +53,7 @@ button,
 .plaque{
   display: flex;
   margin-top: 40px;
+  padding-bottom: 15px;
 }
 
 .price{
@@ -135,4 +136,27 @@ span.btn-round-right{
     display: flex;
   }
 
+}
+
+/* .note{
+  margin-top: 10%;
+  /padding-top: 50px;
+  font-size:48px;
+  color:red;
+
+}  */
+
+.invoice{
+  /* max-width: 500px; */
+  /* min-width: 400px; */
+  /* background-color: #BC658D; */
+  /* text-transform: uppercase; */
+  font-size: 16px;
+  /* position: relative; */
+  /* padding-top: 5px; */
+  /* padding-bottom: 10px; */
+  /* padding-left: 5px; */
+  /* padding-right: 20px; */
+  margin-left: 20px;
+  border-radius: 20px;
 }
