--- a/css/style.css
+++ b/css/style.css
@@ -138,25 +138,15 @@ span.btn-round-right{
 
 }
 
-/* .note{
-  margin-top: 10%;
-  /padding-top: 50px;
-  font-size:48px;
-  color:red;
 
-}  */
 
 .invoice{
-  /* max-width: 500px; */
-  /* min-width: 400px; */
-  /* background-color: #BC658D; */
-  /* text-transform: uppercase; */
   font-size: 16px;
-  /* position: relative; */
-  /* padding-top: 5px; */
-  /* padding-bottom: 10px; */
-  /* padding-left: 5px; */
-  /* padding-right: 20px; */
-  margin-left: 20px;
   border-radius: 20px;
+  text-align: center;
+
+}
+
+.cancel{
+  display: none;
 }
